pedro_respaldiza/session1/exercise01/mariadb.yaml
# Exercise 1 of session 1: Mariadb deployment
# Pedro Ignacio Respaldiza Hidalgo (aka Iñaki Respaldiza)
# K8s Training user: pedro_respaldiza
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  namespace: exercise-01
  labels:
    app: mariadb
    type: database
spec:
  selector:
    app: wordpress
    type: database
  ports:
  - port: 3306
    targetPort: db-port
  type: ClusterIP
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mariadb-deployment
  namespace: exercise-01
  labels:
    app: wordpress
    type: database
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
        type: database
    spec:
      containers:
        - name: wordpress
          image: bitnami/mariadb:latest
          ports:
            - containerPort: 3306
              name: db-port
