pedro_respaldiza/session1/exercise01/wordpress-ingress.yaml
# Exercise 1 of session 1: Mariadb deployment
# Pedro Ignacio Respaldiza Hidalgo (aka Iñaki Respaldiza)
# K8s Training user: pedro_respaldiza
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: exercise-01
  labels:
    app: wordpress
    type: frontend
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
  - host: wordpress-exercise-01.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress-service
          servicePort: http-sv-port
